@@ -1,6 +1,11 @@
 Bind9 LDAP SDB Change Log
 
 bind9-ldap 1.1.1 TO BE ANNOUNCED
+	Bug fixes
+	  - Call malloc() and free() before we assign a value to the
+	    bind{name,pw} variables. I've notice a memory thrashing,
+	    maybe this will help...
+
 	Additions/Misc changes
 	  - Include zone2ldap command
 	  - Include zone2ldif command
